--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,19 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="myskills.html">My skills</a></li>
-							<li><a href="Portfolio.html">Portfolio</a></li>
-							<li><a class="active" href="Contact.html">Contact</a></li>
+							<li><a href="portfolio.html">Portfolio</a></li>
+							<li><a class="active" href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 			</header>
 		</div>
 		<div class="wrapper-holder grey">
 			<section id="main">
-				<div class="images_holder"><img src="images/pic_08.png" alt=""></div>
+				<div class="images/nasibo.png"><img src="images/nasibo.png" alt=""></div>
 				<div class="box_contact">
-					<span class="email">john_markowitz@gmail.com</span>
-					<span class="phone">+45 532 823 385</span>
-					<span class="skype">J_mwitz</span>
+					<span class="email">nasiboabubakar@gmail.com</span>
+					<span class="phone">+254703163674</span>
+					
 				</div>
 				<div class="clear"></div>
 			</section>
